Add invalid URL error message to SMB mount shares

- Adds an error message for when an invalid SMB mount url is provided.

BUG=chromium:882594

Change-Id: I9952a11cdaf4baa727076737636a1346c0048bc2
Reviewed-on: https://chromium-review.googlesource.com/1217852
Commit-Queue: jimmy gong <jimmyxgong@chromium.org>
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Reviewed-by: Scott Chen <scottchen@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592287}
Former-commit-id: 7deb467d04356ff2c43efa81f083e7ca8e4b4850