chrome/browser/resources/settings/downloads_page/smb_browser_proxy.js
@@ -20,6 +20,7 @@ const SmbMountResult = {
   NOT_FOUND: 3,
   UNSUPPORTED_DEVICE: 4,
   MOUNT_EXISTS: 5,
+  INVALID_URL: 6,
 };
 
 cr.define('settings', function() {
