chrome/browser/resources/settings/downloads_page/smb_shares_page.js
@@ -64,6 +64,10 @@ Polymer({
         this.addShareResultText_ =
             loadTimeData.getString('smbShareAddedMountExistsMessage');
         break;
+      case SmbMountResult.INVALID_URL:
+        this.addShareResultText_ =
+            loadTimeData.getString('smbShareAddedInvalidURLMessage');
+        break;
       default:
         this.addShareResultText_ =
             loadTimeData.getString('smbShareAddedErrorMessage');
